--- a/public/wet/gcintranet/wet-boew/css/theme-srv.css
+++ b/public/wet/gcintranet/wet-boew/css/theme-srv.css
@@ -2,7 +2,7 @@
 /*!
  * @title Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * @license wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
- * v16.5.0 - 2025-03-19
+ * v16.2.0 - 2025-02-04
  *
  */
 /*!
@@ -7216,7 +7216,7 @@ a:not([href]):hover, a:not([href]):focus {
 	}
 	.dl-horizontal.dt-max dt {
 		-ms-hyphens: none;
-		    hyphens: none;
+		hyphens: none;
 		min-width: 20ch;
 		white-space: normal;
 		width: auto;
@@ -7423,17 +7423,7 @@ fieldset[disabled] .btn, .btn.disabled, .btn[disabled] {
  *  Firefox-safe line height on input[type="reset|button|submit"]
  */
 input[type=reset], input[type=button], input[type=submit] {
-	/*
-	 *  Form control width
-	 *
-	 *  Default should be representative of the expected length of input.
-	*  Full width should be only for cases when the expected length of input is
-	*  greater than the available width.
-	*  height:37px; rule of Bootstrap was overwritten by height: auto; first
-	*  then a min-height specified, in order to address the issue #8492. July 2019.
-	*/
-	height: auto;
-	min-height: 37px;
+	height: 37px;
 }
 input[type=reset].btn-lg, .btn-group-lg > input[type=reset].btn, input[type=reset].input-lg, .input-group-lg > input[type=reset].form-control,
 .input-group-lg > input[type=reset].input-group-addon,
@@ -7457,6 +7447,20 @@ input[type=reset].btn-xs, .btn-group-xs > input[type=reset].btn, input[type=butt
 	height: 25px;
 }
 
+/*
+ *  Form control width
+ *
+ *  Default should be representative of the expected length of input.
+ *  Full width should be only for cases when the expected length of input is
+ *  greater than the available width.
+ *  height:37px; rule of Bootstrap was overwritten by height: auto; first
+ *  then a min-height specified, in order to address the issue #8492. July 2019.
+ */
+input[type=button], input[type=reset], input[type=submit] {
+	height: auto;
+	min-height: 37px;
+}
+
 .form-control {
 	height: auto;
 	max-width: 100%;
@@ -7476,7 +7480,7 @@ input[type=reset].btn-xs, .btn-group-xs > input[type=reset].btn, input[type=butt
 }
 .form-inline .label-inline label {
 	font-weight: 400;
-	margin-bottom: 0;
+	margin-bottom: 0px;
 	padding-left: 2px;
 }
 
@@ -7795,7 +7799,7 @@ details.alert.alert-danger, details.alert[open].alert-danger, .label-danger[href
  */
 /*
   WET-BOEW
-  @title: Bootstrap 4 supplemental style for WET-BOEW
+  @title: Bootstrap 4 suplemental style for WET-BOEW
  */
 /* Spacing */
 .p-0 {
@@ -10010,7 +10014,7 @@ a:not([href]):hover, a:not([href]):focus {
 	}
 	.dl-horizontal.dt-max dt {
 		-ms-hyphens: none;
-		    hyphens: none;
+		hyphens: none;
 		min-width: 20ch;
 		white-space: normal;
 		width: auto;
@@ -11774,17 +11778,7 @@ caption {
  *  Firefox-safe line height on input[type="reset|button|submit"]
  */
 input[type=reset], input[type=button], input[type=submit] {
-	/*
-	 *  Form control width
-	 *
-	 *  Default should be representative of the expected length of input.
-	*  Full width should be only for cases when the expected length of input is
-	*  greater than the available width.
-	*  height:37px; rule of Bootstrap was overwritten by height: auto; first
-	*  then a min-height specified, in order to address the issue #8492. July 2019.
-	*/
-	height: auto;
-	min-height: 37px;
+	height: 37px;
 }
 input[type=reset].btn-lg, .btn-group-lg > input[type=reset].btn, input[type=reset].input-lg, .input-group-lg > input[type=reset].form-control,
 .input-group-lg > input[type=reset].input-group-addon,
@@ -11808,6 +11802,20 @@ input[type=reset].btn-xs, .btn-group-xs > input[type=reset].btn, input[type=butt
 	height: 25px;
 }
 
+/*
+ *  Form control width
+ *
+ *  Default should be representative of the expected length of input.
+ *  Full width should be only for cases when the expected length of input is
+ *  greater than the available width.
+ *  height:37px; rule of Bootstrap was overwritten by height: auto; first
+ *  then a min-height specified, in order to address the issue #8492. July 2019.
+ */
+input[type=button], input[type=reset], input[type=submit] {
+	height: auto;
+	min-height: 37px;
+}
+
 .form-control {
 	height: auto;
 	max-width: 100%;
@@ -11827,7 +11835,7 @@ input[type=reset].btn-xs, .btn-group-xs > input[type=reset].btn, input[type=butt
 }
 .form-inline .label-inline label {
 	font-weight: 400;
-	margin-bottom: 0;
+	margin-bottom: 0px;
 	padding-left: 2px;
 }
 
@@ -11884,22 +11892,16 @@ fieldset.chkbxrdio-grp legend {
  */
 label.required strong.required,
 legend.required strong.required,
-.checkbox.required strong.required, label.required:not(.required-no-asterisk .required):before,
-legend.required:not(.required-no-asterisk .required):before,
-.checkbox.required:not(.required-no-asterisk .required):before {
+.checkbox.required strong.required, label.required:before,
+legend.required:before,
+.checkbox.required:before {
 	color: #d3080c;
 	font-weight: 700;
 }
 
-label.required,
-legend.required,
-.checkbox.required {
-	/* Set required asterisk styles... unless any parent element uses a disable class */
-	/* Credit: Stack Overflow answer (https://stackoverflow.com/a/73773370) by magda and Zach Jensz (zach-jensz) */
-}
-label.required:not(.required-no-asterisk .required):before,
-legend.required:not(.required-no-asterisk .required):before,
-.checkbox.required:not(.required-no-asterisk .required):before {
+label.required:before,
+legend.required:before,
+.checkbox.required:before {
 	content: "* ";
 	margin-left: -0.87em;
 	vertical-align: top;
@@ -11911,8 +11913,8 @@ legend.required:not(.required-no-asterisk .required):before,
 	font-weight: 700;
 }
 
-[dir=rtl] label.required:not(.required-no-asterisk .required):before,
-[dir=rtl] legend.required:not(.required-no-asterisk .required):before {
+[dir=rtl] label.required:before,
+[dir=rtl] legend.required:before {
 	margin-left: auto;
 	margin-right: -0.87em;
 }
@@ -12393,17 +12395,6 @@ tbody.collapse.in {
 .fade.reverse.in, .fade.out, .pop.out {
 	opacity: 0;
 	visibility: hidden;
-}
-
-@-webkit-keyframes spin {
-	from {
-		-webkit-transform: rotate(0);
-		        transform: rotate(0);
-	}
-	to {
-		-webkit-transform: rotate(360deg);
-		        transform: rotate(360deg);
-	}
 }
 
 @keyframes spin {
@@ -17221,12 +17212,12 @@ body.wb-modal .modal-dialog summary {
 }
 .mfp-arrow-left:before,
 .mfp-arrow-left .mfp-b {
-	border-right: 27px solid #000;
+	border-right: 27px solid #000000;
 }
 
 .mfp-arrow-right:before,
 .mfp-arrow-right .mfp-b {
-	border-left: 27px solid #000;
+	border-left: 27px solid #000000;
 }
 
 /* Should fix upstream in Magnific Popup rather than overriding in WET */
@@ -17604,8 +17595,6 @@ body.wb-modal .modal-dialog summary {
 .wb-mm-ctrls progress {
 	/* Important Thing */
 	-webkit-appearance: none;
-	   -moz-appearance: none;
-	        appearance: none;
 	background: #fff;
 	background-clip: padding-box;
 	border: 7px solid #3e3e3e;
@@ -17639,8 +17628,6 @@ body.wb-modal .modal-dialog summary {
 }
 .wb-mm-ctrls input[type=range] {
 	-webkit-appearance: none;
-	   -moz-appearance: none;
-	        appearance: none;
 	background: transparent;
 	display: inline-block;
 	height: 2.5em;
@@ -17657,7 +17644,6 @@ body.wb-modal .modal-dialog summary {
 }
 .wb-mm-ctrls input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
-	        appearance: none;
 	background: #fff;
 	border: 1px solid #707070;
 	-webkit-box-sizing: content-box;
@@ -18956,20 +18942,20 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
  * wet-boew.github.io/wet-boew/License-eng.html / wet-boew.github.io/wet-boew/Licence-fra.html
 */
 .ol-overlay-container {
-	will-change: left, right, top, bottom;
 	z-index: 1000;
 }
 
 .ol-popup {
+	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	background-color: white;
-	border: 1px solid #ccc;
+	border: 1px solid #cccccc;
 	border-radius: 3px;
 	bottom: 12px;
 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 	        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 	display: block;
-	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
-	        filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
+	filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	font-size: 0.75em;
 	left: -50px;
 	min-width: 250px;
@@ -18995,7 +18981,7 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 }
 
 .ol-popup:before {
-	border-top-color: #ccc;
+	border-top-color: #cccccc;
 	border-width: 11px;
 	left: 48px;
 	margin-left: -11px;
@@ -19025,7 +19011,7 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 	border-bottom: solid 1px #999;
 	color: #999;
 	font-size: 1em;
-	margin: -5px 0 5px;
+	margin: -5px 0px 5px 0px;
 	padding-bottom: 3px;
 }
 
@@ -19055,7 +19041,7 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 }
 .wb-geomap-map.active {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-	        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 	outline-color: #66afe9;
 }
 
@@ -19089,11 +19075,11 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 
 .geomap-lgnd-layer {
 	margin-bottom: 10px;
-	margin-top: 0 !important;
+	margin-top: 0px !important;
 }
 
 .geomap-lgnd > :last-child {
-	margin-bottom: 0;
+	margin-bottom: 0px;
 }
 
 .geomap-geoloc {
@@ -19158,7 +19144,7 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 	font-size: 0.75em;
 	left: 0.6666em;
 	min-width: 100px;
-	padding: 2px 6px;
+	padding: 2px 6px 2px 6px;
 	position: absolute;
 	will-change: contents, width;
 }
@@ -19205,16 +19191,20 @@ html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfil
 	will-change: contents, width;
 }
 
+.ol-overlay-container {
+	will-change: left, right, top, bottom;
+}
+
 .ol-unsupported {
 	display: none;
 }
 
 .ol-viewport .ol-unselectable {
+	-moz-user-select: none;
+	-ms-user-select: none;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-	        user-select: none;
+	user-select: none;
 }
 
 .ol-control {
@@ -19418,7 +19408,7 @@ ol-geolocate button {
 }
 
 .ol-dragbox {
-	border: 2px solid #f03;
+	border: 2px solid #ff0033;
 	border-radius: 2px;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
@@ -19516,7 +19506,7 @@ ol-geolocate button {
 }
 
 .tooltip-txt::after {
-	border-color: rgb(192, 192, 192) transparent transparent;
+	border-color: rgb(192, 192, 192) transparent transparent transparent;
 	border-style: solid;
 	border-width: 5px;
 	content: " ";
@@ -19527,6 +19517,8 @@ ol-geolocate button {
 }
 
 .tooltip-txt {
+	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	background: rgb(192, 192, 192);
 	border: solid 1px rgb(192, 192, 192);
 	border-radius: 5px;
@@ -19535,8 +19527,7 @@ ol-geolocate button {
 	        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 	color: rgb(51, 51, 51);
 	cursor: default;
-	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
-	        filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
+	filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	font-size: 0.8em;
 	left: 50%;
 	margin-left: -60px;
@@ -19576,7 +19567,7 @@ ol-geolocate button {
 .wb-geomap-geoloc-al-cnt .wb-geomap-geoloc-al a {
 	color: #333;
 	display: block;
-	padding: 5px;
+	padding: 5px 5px;
 	text-decoration: none;
 }
 .wb-geomap-geoloc-al-cnt .wb-geomap-geoloc-al a:hover, .wb-geomap-geoloc-al-cnt .wb-geomap-geoloc-al a:focus {
@@ -19590,17 +19581,27 @@ ol-geolocate button {
 
 .glyphicon-spin {
 	-webkit-animation: spin 1000ms infinite linear;
-	        animation: spin 1000ms infinite linear;
+	animation: spin 1000ms infinite linear;
 }
 
-@keyframes spin {
+@-webkit-keyframes spin {
 	0% {
 		-webkit-transform: rotate(0deg);
-		        transform: rotate(0deg);
+		transform: rotate(0deg);
 	}
 	100% {
 		-webkit-transform: rotate(359deg);
-		        transform: rotate(359deg);
+		transform: rotate(359deg);
+	}
+}
+@keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(359deg);
+		transform: rotate(359deg);
 	}
 }
 .skeleton-lgnd-1 {
@@ -19613,7 +19614,7 @@ ol-geolocate button {
 .skeleton-lgnd-2 {
 	background-color: #f5f5f5;
 	height: 25px;
-	margin: 20px 0;
+	margin: 20px 0 20px 0;
 	width: 100%;
 }
 
@@ -20285,6 +20286,7 @@ html:not(.wb-disable) .wb-pgfltr-out {
 	display: none;
 }
 .tbl-gridify tbody,
+.tbl-gridify td,
 .tbl-gridify td {
 	display: block;
 }
@@ -20340,7 +20342,7 @@ dl.colcount-no-break > div, .colcount-no-break > dd,
 
 /*
   WET-BOEW
-  @title: Bootstrap 4 supplemental style for WET-BOEW
+  @title: Bootstrap 4 suplemental style for WET-BOEW
  */
 /* Spacing */
 .p-0 {
@@ -20496,7 +20498,7 @@ Panels
 }
 
 /*
-Miscellaneous Utility CSS
+Miscellaneous Utiliy CSS
  */
 .max-content {
 	max-width: -webkit-max-content;
@@ -20746,7 +20748,7 @@ Miscellaneous Utility CSS
 	}
 	/*
 	  WET-BOEW
-	  @title: Bootstrap 4 supplemental style for WET-BOEW - Small view and over (screen only)
+	  @title: Bootstrap 4 suplemental style for WET-BOEW - Small view and over (screen only)
 	 */
 	/* Alignment */
 	.text-sm-left {
